added backend for authrization

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.9",
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "formik": "^2.4.6",
     "pdfjs-dist": "^5.0.375",
     "react": "^19.0.0",
